# investing-agent-sdk

./: .env.example  .gitignore  CLAUDE.md  IMPROVEMENT_LOOP.md  PROGRESS.md  README.md  ROADMAP.md  RUNTIME_OPTIMIZATIONS.md  VALUATION_VERIFICATION.md  monitor_analysis.sh  pyproject.toml
docs/: AGENT_SPECIFICATIONS.md  ARCHITECTURE.md  BACKTESTING_DESIGN.md  BUSINESS_VIABILITY_ASSESSMENT.md  COST_OPTIMIZATION.md  DATA_SOURCE_EVALUATION.md  DEBUGGING_IMPROVEMENTS_PLAN.md  DEEP_RESEARCH_COMPARISON.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_UPDATE_TRACKER.md  END_TO_END_DEMO.md  EXTRACTION_PLAN.md  IMPLEMENTATION_ROADMAP.md  INSIDER_DATA_EVALUATION.md  LOGGING_AND_OBSERVABILITY.md  MAJOR_UPDATES_DAY7.md  MEMORY_SYSTEM_ARCHITECTURE.md  MOAT_ANALYSIS_DEEP_DIVE.md  MONITORING.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_FINDINGS.md  PHASE0_IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_COMPLETE.md  PROJECT_STATUS.md  QUALITY_FIRST_STRATEGY.md  STRATEGIC_PLANNING_STATUS.md  TECHNICAL_DECISIONS.md  TESTING_GUIDE.md  VALUATION_AI_FRONTIER.md  WEB_UI.md  chatgpt-deep-research-output.md
docs/competitive_analysis/: 2025-10-02_AIHedgeFund.md  2025-10-02_LangGraph.md  2025-10-02_OpenAISwarm.md  2025-10-02_TauricResearch_Consolidated.md  2025-10-02_TradingAgents.md  2025-10-02_TradingR1.md  CONVERGENCE_ANALYSIS.md  PROCESS.md  RESEARCH_QUEUE.md  STRATEGIC_PLANNING_SYNTHESIS.md
docs/evaluations/: DBOT_BYD_PM_Evaluation.md
examples/: checkpoint_demo.py  demo_with_ui.py  end_to_end_demo.py  evaluation_demo.py  integration_test.py  mcp_valuation_demo.py  orchestrator_demo.py  reasoning_trace_demo.py  top_level_orchestrator_demo.py  validation_demo.py
scripts/: generate_hypotheses.py  improvement_loop.py
src/investing_agents/: __init__.py  cli.py  metrics.py  top_level_orchestrator.py  web_ui.py
src/investing_agents/agents/: __init__.py  deep_research.py  dialectical_engine.py  evaluator.py  hypothesis_generator.py  narrative_builder.py  valuation_agent.py
src/investing_agents/connectors/: __init__.py  edgar.py  price_fetcher.py  sec_filing_parser.py  source_manager.py
src/investing_agents/core/: __init__.py  checkpoint.py  context_compression.py  mcp_config.py  orchestrator.py  rate_limiter.py  search_cache.py  state.py
src/investing_agents/evaluation/: __init__.py  benchmark.py  evaluator.py  fast_evaluator.py  pm_evaluator.py  quality_rubric.py  structure_validator.py
src/investing_agents/mcp/: __init__.py  valuation_server.py
src/investing_agents/monitoring/: __init__.py  checkpoint.py  console_ui.py  health.py  metrics.py  progress.py  validators.py
src/investing_agents/observability/: __init__.py  logging_config.py  reasoning_trace.py
tests/: test_brave_mcp_standalone.py  test_brave_vs_exa_comparison.py  test_deep_research.py  test_dialectical_engine.py  test_direct_websearch.py  test_direct_websearch_simple.py  test_evaluator.py  test_exa_investment_search.py  test_exa_mcp_basic.py  test_exa_nested_query.py  test_exa_orchestrator_integration.py  test_hypothesis_generator.py  test_integration.py  test_mcp_valuation.py  test_narrative_builder.py  test_orchestrator.py  test_orchestrator_brave_integration.py  test_orchestrator_websearch.py  test_report_structure.py  test_schema_validation.py  test_validation_integration.py  test_valuation.py  test_valuation_comprehensive.py  test_valuation_stories_to_numbers.py  test_web_search_integration.py  test_websearch_availability.py  test_websearch_with_permission.py
(+15 files in other folders)
